--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "iniparser": "^1.0.5",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1"
   }
 }
